# axum_postgres

./: .env-example  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml
src/: controller.rs  main.rs
