[package]
name = "axum_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
# server
axum = "0.7.4"
tokio = { version = "1.36.2", features = ["full"] }

# sqlx
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-native-tls",
    "macros",
] }

# serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# env
dotenvy = "0.15.7"
